Fixing footer styles: social buttons alignment, text-align for logo

--- a/themes/ABC_amsterdam/css/components.css
+++ b/themes/ABC_amsterdam/css/components.css
@@ -63,10 +63,9 @@
 #row-footer {
     /* outline: solid 1px red; */
     display: flex;
-    overflow: hidden;
-    /* flex-direction: column; */
+    /* overflow: hidden; */
+    justify-content: space-between;
     flex-wrap: wrap;
-    justify-content: space-around;
 }
 
 #row-prices {
